<resources>
    <string name="app_name">InterGrupoTest</string>

    <!--LoginActivity-->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_remenber_me">Remenber me</string>
    <string name="login_login">login</string>
    <string name="login_field_required">Este campo es requerido</string>
    <string name="login_email_wrong">Formato incorrecto</string>

    <string name="main_sign_out">Cerrar sesión</string>
    <string name="main_prospect_list">Lista de prospectos</string>
    <string name="main_dashboard">Dashboard</string>


    <string-array name="array_status">
        <item>Pendiente</item>
        <item>Aprovado</item>
        <item>Aceptado</item>
        <item>Rechazado</item>
        <item>Deshabilitado</item>
    </string-array>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prospect_empty_state">Losiento, no pudimos encontrar ningún prospecto.</string>
</resources>
