<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_prospect"
                android:icon="@drawable/ic_list_gray_24dp"
                android:title="@string/main_prospect_list"/>
        <item
                android:id="@+id/nav_dashboard"
                android:icon="@drawable/ic_dashboard_gray_24dp"
                android:title="@string/main_dashboard"/>
    </group>

    <item android:title="@string/main_sign_out">
        <menu>
            <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/ic_exit_to_app_gray_24dp"
                    android:title="@string/main_sign_out"/>
        </menu>
    </item>

</menu>
