<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".ui.login.LoginActivityImpl">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_email"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/login_email">

        <EditText
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:id="@+id/edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/edittext_password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/textinputlayout_email"
            android:id="@+id/textinputlayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/login_password">

        <EditText
                android:inputType="textPassword"
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
            android:id="@+id/checkbox_remenber_me"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/login_remenber_me"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            app:layout_constraintTop_toBottomOf="@+id/checkbox_remenber_me"
            android:id="@+id/button"
            android:text="@string/login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>